opam-version: "1.2.2"
version: "0.1dev"
maintainer: "theosotr@aueb.gr"
authors: ["Thodoris Sotiropoulos"]
homepage: "https://github.com/AUEB-BALab/fsmove"
bug-reports: "https://github.com/AUEB-BALab/fsmove/issues"
dev-repo: "git+https://github.com/AUEB-BALab/fsmove.git"
license: "GPL-3.0"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
