(include_subdirs unqualified)

(library
  (name fsmove)
  (modules (:standard \ main))
  (libraries core core_unix.command_unix camlp-streams yojson ppx_jane ppx_let str fd-send-recv fpath)
  (preprocess (pps ppx_jane)))

(executable
  (name main)
  (public_name fsmove)
  (modules main)
  (libraries fsmove)
  (preprocess (pps ppx_jane)))
